--- a/presets/global.yaml
+++ b/presets/global.yaml
@@ -10,7 +10,7 @@ presets:
     - dr
     - stock
   - left: typespecs
-    operation: typespecs
+    operation: has
     right:
     - ''
     - common
