STAR-1289: update stock presets

--- a/presets/america.yaml
+++ b/presets/america.yaml
@@ -1,6 +1,8 @@
 ---
 presets:
 - name: all_stocks
+  options:
+    active_symbols_only: true
   filter:
   - left: exchange
     operation: in_range
@@ -20,14 +22,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - america
+- name: large_cap
   options:
     active_symbols_only: true
-- name: large_cap
   filter:
   - left: exchange
     operation: in_range
@@ -47,14 +49,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: desc
+  markets:
+  - america
+- name: small_cap
   options:
     active_symbols_only: true
-- name: small_cap
   filter:
   - left: exchange
     operation: in_range
@@ -74,14 +76,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: asc
+  markets:
+  - america
+- name: largest_employers
   options:
     active_symbols_only: true
-- name: largest_employers
   filter:
   - left: exchange
     operation: in_range
@@ -102,15 +104,15 @@ presets:
     operation: equal
     right: stock
   - left: market_cap_basic
-    operation: nempty
-  - left: number_of_employees
     operation: nempty
   sort:
     sortBy: number_of_employees
     sortOrder: desc
+  markets:
+  - america
+- name: high_dividend
   options:
     active_symbols_only: true
-- name: high_dividend
   filter:
   - left: exchange
     operation: in_range
@@ -133,14 +135,14 @@ presets:
   - left: dividend_yield_recent
     operation: greater
     right: 0
-  - left: dividend_yield_recent
-    operation: nempty
   sort:
     sortBy: dividend_yield_recent
     sortOrder: desc
+  markets:
+  - america
+- name: highest_net_income
   options:
     active_symbols_only: true
-- name: highest_net_income
   filter:
   - left: exchange
     operation: in_range
@@ -160,14 +162,41 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: net_income
-    operation: nempty
   sort:
     sortBy: net_income
     sortOrder: desc
+  markets:
+  - america
+- name: highest_cash
   options:
     active_symbols_only: true
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  sort:
+    sortBy: cash_n_short_term_invest_fq
+    sortOrder: desc
+  markets:
+  - america
 - name: gainers
+  options:
+    active_symbols_only: true
   filter:
   - left: exchange
     operation: in_range
@@ -195,14 +224,14 @@ presets:
   - left: change
     operation: greater
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: desc
+  markets:
+  - america
+- name: losers
   options:
     active_symbols_only: true
-- name: losers
   filter:
   - left: exchange
     operation: in_range
@@ -230,14 +259,14 @@ presets:
   - left: change
     operation: less
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: asc
+  markets:
+  - america
+- name: active
   options:
     active_symbols_only: true
-- name: volume_leaders
   filter:
   - left: exchange
     operation: in_range
@@ -262,14 +291,14 @@ presets:
     right:
     - 2
     - 10000
-  - left: volume
-    operation: nempty
   sort:
     sortBy: volume
     sortOrder: desc
+  markets:
+  - america
+- name: unusual_volume
   options:
     active_symbols_only: true
-- name: unusual_volume
   filter:
   - left: exchange
     operation: in_range
@@ -289,14 +318,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: relative_volume_10d_calc
-    operation: nempty
   sort:
     sortBy: relative_volume_10d_calc
     sortOrder: desc
+  markets:
+  - america
+- name: most_volatile
   options:
     active_symbols_only: true
-- name: most_volatile
   filter:
   - left: exchange
     operation: in_range
@@ -316,14 +345,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: Volatility.D
-    operation: nempty
   sort:
     sortBy: Volatility.D
     sortOrder: desc
+  markets:
+  - america
+- name: high_beta
   options:
     active_symbols_only: true
-- name: high_beta
   filter:
   - left: exchange
     operation: in_range
@@ -344,15 +373,15 @@ presets:
     operation: equal
     right: stock
   - left: market_cap_basic
-    operation: nempty
-  - left: beta_1_year
     operation: nempty
   sort:
     sortBy: beta_1_year
     sortOrder: desc
+  markets:
+  - america
+- name: best_performing
   options:
     active_symbols_only: true
-- name: best_performing
   filter:
   - left: exchange
     operation: in_range
@@ -373,15 +402,15 @@ presets:
     operation: equal
     right: stock
   - left: market_cap_basic
-    operation: nempty
-  - left: Perf.Y
     operation: nempty
   sort:
     sortBy: Perf.Y
     sortOrder: desc
+  markets:
+  - america
+- name: highest_revenue
   options:
     active_symbols_only: true
-- name: highest_revenue
   filter:
   - left: exchange
     operation: in_range
@@ -401,14 +430,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: total_revenue
-    operation: nempty
   sort:
     sortBy: total_revenue
     sortOrder: desc
+  markets:
+  - america
+- name: most_expensive
   options:
     active_symbols_only: true
-- name: most_expensive
   filter:
   - left: exchange
     operation: in_range
@@ -430,14 +459,14 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: desc
+  markets:
+  - america
+- name: penny_stocks
   options:
     active_symbols_only: true
-- name: penny_stocks
   filter:
   - left: exchange
     operation: in_range
@@ -457,14 +486,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: asc
+  markets:
+  - america
+- name: overbought
   options:
     active_symbols_only: true
-- name: overbought
   filter:
   - left: exchange
     operation: in_range
@@ -487,14 +516,14 @@ presets:
   - left: RSI
     operation: greater
     right: 70
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
-    sortOrder: asc
+    sortBy: RSI
+    sortOrder: desc
+  markets:
+  - america
+- name: oversold
   options:
     active_symbols_only: true
-- name: oversold
   filter:
   - left: exchange
     operation: in_range
@@ -517,14 +546,14 @@ presets:
   - left: RSI
     operation: less
     right: 30
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
+    sortBy: RSI
     sortOrder: asc
+  markets:
+  - america
+- name: all_time_high
   options:
     active_symbols_only: true
-- name: all_time_high
   filter:
   - left: exchange
     operation: in_range
@@ -547,14 +576,14 @@ presets:
   - left: High.All
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - america
+- name: all_time_low
   options:
     active_symbols_only: true
-- name: all_time_low
   filter:
   - left: exchange
     operation: in_range
@@ -577,14 +606,14 @@ presets:
   - left: Low.All
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - america
+- name: above_52wk_high
   options:
     active_symbols_only: true
-- name: above_52wk_high
   filter:
   - left: exchange
     operation: in_range
@@ -607,14 +636,14 @@ presets:
   - left: price_52_week_high
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - america
+- name: below_52wk_low
   options:
     active_symbols_only: true
-- name: below_52wk_low
   filter:
   - left: exchange
     operation: in_range
@@ -637,14 +666,14 @@ presets:
   - left: price_52_week_low
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - america
+- name: pre_market_gainers
   options:
     active_symbols_only: true
-- name: pre-market-gainers
   filter:
   - left: exchange
     operation: in_range
@@ -664,11 +693,6 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 2
-    - 10000
   - left: premarket_change
     operation: greater
     right: 0
@@ -677,9 +701,11 @@ presets:
   sort:
     sortBy: premarket_change
     sortOrder: desc
+  markets:
+  - america
+- name: pre_market_losers
   options:
     active_symbols_only: true
-- name: pre-market-losers
   filter:
   - left: exchange
     operation: in_range
@@ -699,11 +725,6 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 2
-    - 10000
   - left: premarket_change
     operation: less
     right: 0
@@ -712,5 +733,183 @@ presets:
   sort:
     sortBy: premarket_change
     sortOrder: asc
+  markets:
+  - america
+- name: active_pre_market_stocks
   options:
     active_symbols_only: true
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: premarket_volume
+    operation: nempty
+  sort:
+    sortBy: premarket_volume
+    sortOrder: desc
+  markets:
+  - america
+- name: pre_market_gappers
+  options:
+    active_symbols_only: true
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: premarket_gap
+    operation: nempty
+  sort:
+    sortBy: premarket_gap
+    sortOrder: desc
+  markets:
+  - america
+- name: after_hours_gainers
+  options:
+    active_symbols_only: true
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: postmarket_change
+    operation: greater
+    right: 0
+  - left: postmarket_change
+    operation: nempty
+  sort:
+    sortBy: postmarket_change
+    sortOrder: desc
+  markets:
+  - america
+- name: after_hours_losers
+  options:
+    active_symbols_only: true
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: postmarket_change
+    operation: less
+    right: 0
+  - left: postmarket_change
+    operation: nempty
+  sort:
+    sortBy: postmarket_change
+    sortOrder: asc
+  markets:
+  - america
+- name: active_after_hours_stocks
+  options:
+    active_symbols_only: true
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: postmarket_volume
+    operation: nempty
+  sort:
+    sortBy: postmarket_volume
+    sortOrder: desc
+  markets:
+  - america
+- name: pink_sheet_stocks
+  options:
+    active_symbols_only: true
+  filter:
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: exchange
+    operation: equal
+    right: OTC
+  - left: submarket
+    operation: equal
+    right: PINK
+  sort:
+    sortBy: market_cap_basic
+    sortOrder: desc
+  markets:
+  - america
