--- a/presets/malaysia.yaml
+++ b/presets/malaysia.yaml
@@ -1,6 +1,8 @@
 ---
 presets:
 - name: all_stocks
+  options:
+    active_symbols_only: true
   filter:
   - left: is_primary
     operation: equal
@@ -14,14 +16,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - malaysia
+- name: large_cap
   options:
     active_symbols_only: true
-- name: large_cap
   filter:
   - left: is_primary
     operation: equal
@@ -35,14 +37,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: desc
+  markets:
+  - malaysia
+- name: small_cap
   options:
     active_symbols_only: true
-- name: small_cap
   filter:
   - left: is_primary
     operation: equal
@@ -56,14 +58,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: asc
+  markets:
+  - malaysia
+- name: largest_employers
   options:
     active_symbols_only: true
-- name: largest_employers
   filter:
   - left: is_primary
     operation: equal
@@ -78,15 +80,15 @@ presets:
     operation: equal
     right: stock
   - left: market_cap_basic
-    operation: nempty
-  - left: number_of_employees
     operation: nempty
   sort:
     sortBy: number_of_employees
     sortOrder: desc
+  markets:
+  - malaysia
+- name: high_dividend
   options:
     active_symbols_only: true
-- name: high_dividend
   filter:
   - left: is_primary
     operation: equal
@@ -103,14 +105,14 @@ presets:
   - left: dividend_yield_recent
     operation: greater
     right: 0
-  - left: dividend_yield_recent
-    operation: nempty
   sort:
     sortBy: dividend_yield_recent
     sortOrder: desc
+  markets:
+  - malaysia
+- name: highest_net_income
   options:
     active_symbols_only: true
-- name: highest_net_income
   filter:
   - left: is_primary
     operation: equal
@@ -124,14 +126,35 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: net_income
-    operation: nempty
   sort:
     sortBy: net_income
     sortOrder: desc
+  markets:
+  - malaysia
+- name: highest_cash
   options:
     active_symbols_only: true
+  filter:
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has
+    right: sharia
+  - left: type
+    operation: equal
+    right: stock
+  sort:
+    sortBy: cash_n_short_term_invest_fq
+    sortOrder: desc
+  markets:
+  - malaysia
 - name: gainers
+  options:
+    active_symbols_only: true
   filter:
   - left: is_primary
     operation: equal
@@ -153,14 +176,14 @@ presets:
   - left: change
     operation: greater
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: desc
+  markets:
+  - malaysia
+- name: losers
   options:
     active_symbols_only: true
-- name: losers
   filter:
   - left: is_primary
     operation: equal
@@ -182,14 +205,14 @@ presets:
   - left: change
     operation: less
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: asc
+  markets:
+  - malaysia
+- name: active
   options:
     active_symbols_only: true
-- name: volume_leaders
   filter:
   - left: is_primary
     operation: equal
@@ -208,14 +231,14 @@ presets:
     right:
     - 0.01
     - 10000
-  - left: volume
-    operation: nempty
   sort:
     sortBy: volume
     sortOrder: desc
+  markets:
+  - malaysia
+- name: unusual_volume
   options:
     active_symbols_only: true
-- name: unusual_volume
   filter:
   - left: is_primary
     operation: equal
@@ -229,14 +252,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: relative_volume_10d_calc
-    operation: nempty
   sort:
     sortBy: relative_volume_10d_calc
     sortOrder: desc
+  markets:
+  - malaysia
+- name: most_volatile
   options:
     active_symbols_only: true
-- name: most_volatile
   filter:
   - left: is_primary
     operation: equal
@@ -250,14 +273,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: Volatility.D
-    operation: nempty
   sort:
     sortBy: Volatility.D
     sortOrder: desc
+  markets:
+  - malaysia
+- name: high_beta
   options:
     active_symbols_only: true
-- name: high_beta
   filter:
   - left: is_primary
     operation: equal
@@ -272,15 +295,15 @@ presets:
     operation: equal
     right: stock
   - left: market_cap_basic
-    operation: nempty
-  - left: beta_1_year
     operation: nempty
   sort:
     sortBy: beta_1_year
     sortOrder: desc
+  markets:
+  - malaysia
+- name: best_performing
   options:
     active_symbols_only: true
-- name: best_performing
   filter:
   - left: is_primary
     operation: equal
@@ -295,15 +318,15 @@ presets:
     operation: equal
     right: stock
   - left: market_cap_basic
-    operation: nempty
-  - left: Perf.Y
     operation: nempty
   sort:
     sortBy: Perf.Y
     sortOrder: desc
+  markets:
+  - malaysia
+- name: highest_revenue
   options:
     active_symbols_only: true
-- name: highest_revenue
   filter:
   - left: is_primary
     operation: equal
@@ -317,14 +340,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: total_revenue
-    operation: nempty
   sort:
     sortBy: total_revenue
     sortOrder: desc
+  markets:
+  - malaysia
+- name: most_expensive
   options:
     active_symbols_only: true
-- name: most_expensive
   filter:
   - left: is_primary
     operation: equal
@@ -340,14 +363,14 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: desc
+  markets:
+  - malaysia
+- name: penny_stocks
   options:
     active_symbols_only: true
-- name: penny_stocks
   filter:
   - left: is_primary
     operation: equal
@@ -361,14 +384,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: asc
+  markets:
+  - malaysia
+- name: overbought
   options:
     active_symbols_only: true
-- name: overbought
   filter:
   - left: is_primary
     operation: equal
@@ -385,14 +408,14 @@ presets:
   - left: RSI
     operation: greater
     right: 70
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
-    sortOrder: asc
+    sortBy: RSI
+    sortOrder: desc
+  markets:
+  - malaysia
+- name: oversold
   options:
     active_symbols_only: true
-- name: oversold
   filter:
   - left: is_primary
     operation: equal
@@ -409,14 +432,14 @@ presets:
   - left: RSI
     operation: less
     right: 30
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
+    sortBy: RSI
     sortOrder: asc
+  markets:
+  - malaysia
+- name: all_time_high
   options:
     active_symbols_only: true
-- name: all_time_high
   filter:
   - left: is_primary
     operation: equal
@@ -433,14 +456,14 @@ presets:
   - left: High.All
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - malaysia
+- name: all_time_low
   options:
     active_symbols_only: true
-- name: all_time_low
   filter:
   - left: is_primary
     operation: equal
@@ -457,14 +480,14 @@ presets:
   - left: Low.All
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - malaysia
+- name: above_52wk_high
   options:
     active_symbols_only: true
-- name: above_52wk_high
   filter:
   - left: is_primary
     operation: equal
@@ -481,14 +504,14 @@ presets:
   - left: price_52_week_high
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - malaysia
+- name: below_52wk_low
   options:
     active_symbols_only: true
-- name: below_52wk_low
   filter:
   - left: is_primary
     operation: equal
@@ -505,68 +528,8 @@ presets:
   - left: price_52_week_low
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
-  options:
-    active_symbols_only: true
-- name: pre-market-gainers
-  filter:
-  - left: is_primary
-    operation: equal
-    right: true
-  - left: typespecs
-    operation: has
-    right: common
-  - left: typespecs
-    operation: has
-    right: sharia
-  - left: type
-    operation: equal
-    right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 0.01
-    - 10000
-  - left: premarket_change
-    operation: greater
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: desc
-  options:
-    active_symbols_only: true
-- name: pre-market-losers
-  filter:
-  - left: is_primary
-    operation: equal
-    right: true
-  - left: typespecs
-    operation: has
-    right: common
-  - left: typespecs
-    operation: has
-    right: sharia
-  - left: type
-    operation: equal
-    right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 0.01
-    - 10000
-  - left: premarket_change
-    operation: less
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: asc
-  options:
-    active_symbols_only: true
+  markets:
+  - malaysia
