--- a/presets/venezuela.yaml
+++ b/presets/venezuela.yaml
@@ -1,6 +1,8 @@
 ---
 presets:
 - name: all_stocks
+  options:
+    active_symbols_only: true
   filter:
   - left: is_primary
     operation: equal
@@ -11,14 +13,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - venezuela
+- name: large_cap
   options:
     active_symbols_only: true
-- name: large_cap
   filter:
   - left: is_primary
     operation: equal
@@ -29,14 +31,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: desc
+  markets:
+  - venezuela
+- name: small_cap
   options:
     active_symbols_only: true
-- name: small_cap
   filter:
   - left: is_primary
     operation: equal
@@ -47,14 +49,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: asc
+  markets:
+  - venezuela
+- name: largest_employers
   options:
     active_symbols_only: true
-- name: largest_employers
   filter:
   - left: is_primary
     operation: equal
@@ -66,15 +68,15 @@ presets:
     operation: equal
     right: stock
   - left: market_cap_basic
-    operation: nempty
-  - left: number_of_employees
     operation: nempty
   sort:
     sortBy: number_of_employees
     sortOrder: desc
+  markets:
+  - venezuela
+- name: high_dividend
   options:
     active_symbols_only: true
-- name: high_dividend
   filter:
   - left: is_primary
     operation: equal
@@ -88,14 +90,14 @@ presets:
   - left: dividend_yield_recent
     operation: greater
     right: 0
-  - left: dividend_yield_recent
-    operation: nempty
   sort:
     sortBy: dividend_yield_recent
     sortOrder: desc
+  markets:
+  - venezuela
+- name: highest_net_income
   options:
     active_symbols_only: true
-- name: highest_net_income
   filter:
   - left: is_primary
     operation: equal
@@ -106,14 +108,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: net_income
-    operation: nempty
   sort:
     sortBy: net_income
     sortOrder: desc
+  markets:
+  - venezuela
+- name: highest_cash
   options:
     active_symbols_only: true
-- name: gainers
   filter:
   - left: is_primary
     operation: equal
@@ -124,22 +126,35 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 0.1
-    - 10000
+  sort:
+    sortBy: cash_n_short_term_invest_fq
+    sortOrder: desc
+  markets:
+  - venezuela
+- name: gainers
+  options:
+    active_symbols_only: true
+  filter:
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: type
+    operation: equal
+    right: stock
   - left: change
     operation: greater
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: desc
+  markets:
+  - venezuela
+- name: losers
   options:
     active_symbols_only: true
-- name: losers
   filter:
   - left: is_primary
     operation: equal
@@ -150,22 +165,17 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 0.1
-    - 10000
   - left: change
     operation: less
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: asc
+  markets:
+  - venezuela
+- name: active
   options:
     active_symbols_only: true
-- name: volume_leaders
   filter:
   - left: is_primary
     operation: equal
@@ -176,19 +186,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 0.1
-    - 10000
-  - left: volume
-    operation: nempty
   sort:
     sortBy: volume
     sortOrder: desc
+  markets:
+  - venezuela
+- name: unusual_volume
   options:
     active_symbols_only: true
-- name: unusual_volume
   filter:
   - left: is_primary
     operation: equal
@@ -199,14 +204,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: relative_volume_10d_calc
-    operation: nempty
   sort:
     sortBy: relative_volume_10d_calc
     sortOrder: desc
+  markets:
+  - venezuela
+- name: most_volatile
   options:
     active_symbols_only: true
-- name: most_volatile
   filter:
   - left: is_primary
     operation: equal
@@ -217,14 +222,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: Volatility.D
-    operation: nempty
   sort:
     sortBy: Volatility.D
     sortOrder: desc
+  markets:
+  - venezuela
+- name: high_beta
   options:
     active_symbols_only: true
-- name: high_beta
   filter:
   - left: is_primary
     operation: equal
@@ -236,15 +241,15 @@ presets:
     operation: equal
     right: stock
   - left: market_cap_basic
-    operation: nempty
-  - left: beta_1_year
     operation: nempty
   sort:
     sortBy: beta_1_year
     sortOrder: desc
+  markets:
+  - venezuela
+- name: best_performing
   options:
     active_symbols_only: true
-- name: best_performing
   filter:
   - left: is_primary
     operation: equal
@@ -256,15 +261,15 @@ presets:
     operation: equal
     right: stock
   - left: market_cap_basic
-    operation: nempty
-  - left: Perf.Y
     operation: nempty
   sort:
     sortBy: Perf.Y
     sortOrder: desc
+  markets:
+  - venezuela
+- name: highest_revenue
   options:
     active_symbols_only: true
-- name: highest_revenue
   filter:
   - left: is_primary
     operation: equal
@@ -275,14 +280,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: total_revenue
-    operation: nempty
   sort:
     sortBy: total_revenue
     sortOrder: desc
+  markets:
+  - venezuela
+- name: most_expensive
   options:
     active_symbols_only: true
-- name: most_expensive
   filter:
   - left: is_primary
     operation: equal
@@ -295,14 +300,14 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: desc
+  markets:
+  - venezuela
+- name: penny_stocks
   options:
     active_symbols_only: true
-- name: penny_stocks
   filter:
   - left: is_primary
     operation: equal
@@ -313,14 +318,14 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: asc
+  markets:
+  - venezuela
+- name: overbought
   options:
     active_symbols_only: true
-- name: overbought
   filter:
   - left: is_primary
     operation: equal
@@ -334,14 +339,14 @@ presets:
   - left: RSI
     operation: greater
     right: 70
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
-    sortOrder: asc
+    sortBy: RSI
+    sortOrder: desc
+  markets:
+  - venezuela
+- name: oversold
   options:
     active_symbols_only: true
-- name: oversold
   filter:
   - left: is_primary
     operation: equal
@@ -355,14 +360,14 @@ presets:
   - left: RSI
     operation: less
     right: 30
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
+    sortBy: RSI
     sortOrder: asc
+  markets:
+  - venezuela
+- name: all_time_high
   options:
     active_symbols_only: true
-- name: all_time_high
   filter:
   - left: is_primary
     operation: equal
@@ -376,14 +381,14 @@ presets:
   - left: High.All
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - venezuela
+- name: all_time_low
   options:
     active_symbols_only: true
-- name: all_time_low
   filter:
   - left: is_primary
     operation: equal
@@ -397,14 +402,14 @@ presets:
   - left: Low.All
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - venezuela
+- name: above_52wk_high
   options:
     active_symbols_only: true
-- name: above_52wk_high
   filter:
   - left: is_primary
     operation: equal
@@ -418,14 +423,14 @@ presets:
   - left: price_52_week_high
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
+  markets:
+  - venezuela
+- name: below_52wk_low
   options:
     active_symbols_only: true
-- name: below_52wk_low
   filter:
   - left: is_primary
     operation: equal
@@ -439,62 +444,8 @@ presets:
   - left: price_52_week_low
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
-  options:
-    active_symbols_only: true
-- name: pre-market-gainers
-  filter:
-  - left: is_primary
-    operation: equal
-    right: true
-  - left: typespecs
-    operation: has
-    right: common
-  - left: type
-    operation: equal
-    right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 0.1
-    - 10000
-  - left: premarket_change
-    operation: greater
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: desc
-  options:
-    active_symbols_only: true
-- name: pre-market-losers
-  filter:
-  - left: is_primary
-    operation: equal
-    right: true
-  - left: typespecs
-    operation: has
-    right: common
-  - left: type
-    operation: equal
-    right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 0.1
-    - 10000
-  - left: premarket_change
-    operation: less
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: asc
-  options:
-    active_symbols_only: true
+  markets:
+  - venezuela
